Cleanup by Zarabadoo: Make the quicktab turn icon only on tablets also to prevent wrapping.

--- a/sass/responsive.custom.scss
+++ b/sass/responsive.custom.scss
@@ -97,7 +97,12 @@
   div#panels-ipe-control-container {
     display: none !important;
   }
+}
 
+/*
+ * Tablet sizes and down
+ */
+@media only screen and (max-width: 768px) {
   // Commons quicktab pills are distilled to only icons.
   .quicktabs-style-commons-pills {
     ul {
@@ -122,7 +127,6 @@
     }
   }
 }
-
 
 /*
  * Tablet sizes and up
